# zero-to-playground

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  configuration.toml  sqlx-data.json
.cargo/: config.toml
.do/: app.yaml
configuration/: base.toml  local.toml  production.toml
migrations/: 20230206082247_create_subscriptions_table.sql  20230226074015_add_status_to_subscriptions.sql
scripts/: create-app.sh  init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs  subscriptions.rs  utils.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
